--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Система обмена данными - <a asp-area="" asp-controller="Home" asp-action="Privacy">Конфиденциальность</a>
+            &copy; Система обмена данными
         </div>
     </footer>
 
