--- a/Views/Home/EducationDepartments.cshtml
+++ b/Views/Home/EducationDepartments.cshtml
@@ -30,7 +30,7 @@
                                     <th>Название УО</th>
                                     <th>Город</th>
                                     <th>Адрес</th>
-                                    <th>Директор</th>
+                                    <th>ФИО Руководителя</th>
                                     <th>Активно</th>
                                     <th>Действия</th>
                                 </tr>
@@ -124,7 +124,7 @@
                         <input type="email" class="form-control" id="educationDepartmentEmail">
                     </div>
                     <div class="mb-3">
-                        <label for="educationDepartmentDirector" class="form-label">Имя директора</label>
+                        <label for="educationDepartmentDirector" class="form-label">ФИО руководителя</label>
                         <input type="text" class="form-control" id="educationDepartmentDirector">
                     </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
